cargo_test_results.txt
   Compiling pq-composite-sig v0.1.0 (C:\Users\chadm\Projects\pq-composite-sig)
error[E0412]: cannot find type `VerifyingKey` in this scope
  --> tests\old_artifacts_tests.rs:27:14
   |
27 |         vk: &VerifyingKey,
   |              ^^^^^^^^^^^^ not found in this scope
   |
help: consider importing one of these structs
   |
 3 +     use ed25519_dalek::VerifyingKey;
   |
 3 +     use ed448_goldilocks_plus::VerifyingKey;
   |
 3 +     use pq_composite_sig::mldsa44_ed25519::VerifyingKey;
   |
 3 +     use pq_composite_sig::mldsa65_ed25519::VerifyingKey;
   |
   = and 1 other candidate

error[E0412]: cannot find type `Signature` in this scope
  --> tests\old_artifacts_tests.rs:29:21
   |
29 |         signature: &Signature,
   |                     ^^^^^^^^^ not found in this scope
   |
help: consider importing one of these structs
   |
 3 +     use ed25519_dalek::Signature;
   |
 3 +     use ed448_goldilocks_plus::Signature;
   |
 3 +     use pq_composite_sig::mldsa44_ed25519::Signature;
   |
 3 +     use pq_composite_sig::mldsa65_ed25519::Signature;
   |
   = and 1 other candidate

error[E0412]: cannot find type `CompositeError` in this scope
  --> tests\old_artifacts_tests.rs:31:21
   |
31 |     ) -> Result<(), CompositeError> {
   |                     ^^^^^^^^^^^^^^ not found in this scope
   |
help: consider importing one of these enums
   |
 3 +     use pq_composite_sig::mldsa44_ed25519::CompositeError;
   |
 3 +     use pq_composite_sig::mldsa65_ed25519::CompositeError;
   |
 3 +     use pq_composite_sig::mldsa87_ed448::CompositeError;
   |

error[E0433]: failed to resolve: use of undeclared type `CompositeError`
  --> tests\old_artifacts_tests.rs:33:24
   |
33 |             return Err(CompositeError::InvalidContextLength);
   |                        ^^^^^^^^^^^^^^ use of undeclared type `CompositeError`
   |
help: consider importing one of these enums
   |
 3 +     use pq_composite_sig::mldsa44_ed25519::CompositeError;
   |
 3 +     use pq_composite_sig::mldsa65_ed25519::CompositeError;
   |
 3 +     use pq_composite_sig::mldsa87_ed448::CompositeError;
   |

error[E0433]: failed to resolve: use of undeclared type `CompositeError`
  --> tests\old_artifacts_tests.rs:40:26
   |
40 |             .map_err(|_| CompositeError::InvalidMlDsaSignature)?;
   |                          ^^^^^^^^^^^^^^ use of undeclared type `CompositeError`
   |
help: consider importing one of these enums
   |
 3 +     use pq_composite_sig::mldsa44_ed25519::CompositeError;
   |
 3 +     use pq_composite_sig::mldsa65_ed25519::CompositeError;
   |
 3 +     use pq_composite_sig::mldsa87_ed448::CompositeError;
   |

error[E0433]: failed to resolve: use of undeclared type `CompositeError`
  --> tests\old_artifacts_tests.rs:45:26
   |
45 |             .map_err(|_| CompositeError::InvalidEdSignature)?;
   |                          ^^^^^^^^^^^^^^ use of undeclared type `CompositeError`
   |
help: consider importing one of these enums
   |
 3 +     use pq_composite_sig::mldsa44_ed25519::CompositeError;
   |
 3 +     use pq_composite_sig::mldsa65_ed25519::CompositeError;
   |
 3 +     use pq_composite_sig::mldsa87_ed448::CompositeError;
   |

error[E0433]: failed to resolve: use of undeclared type `VerifyingKey`
  --> tests\old_artifacts_tests.rs:67:18
   |
67 |         let vk = VerifyingKey::try_from(spki_bytes.as_ref())
   |                  ^^^^^^^^^^^^ use of undeclared type `VerifyingKey`
   |
help: consider importing one of these structs
   |
 3 +     use ed25519_dalek::VerifyingKey;
   |
 3 +     use ed448_goldilocks_plus::VerifyingKey;
   |
 3 +     use pq_composite_sig::mldsa44_ed25519::VerifyingKey;
   |
 3 +     use pq_composite_sig::mldsa65_ed25519::VerifyingKey;
   |
   = and 1 other candidate

error[E0433]: failed to resolve: use of undeclared type `Signature`
  --> tests\old_artifacts_tests.rs:69:19
   |
69 |         let sig = Signature::try_from(signature_bytes)
   |                   ^^^^^^^^^ use of undeclared type `Signature`
   |
help: consider importing one of these structs
   |
 3 +     use ed25519_dalek::Signature;
   |
 3 +     use ed448_goldilocks_plus::Signature;
   |
 3 +     use pq_composite_sig::mldsa44_ed25519::Signature;
   |
 3 +     use pq_composite_sig::mldsa65_ed25519::Signature;
   |
   = and 1 other candidate

warning: unused import: `super::*`
 --> tests\old_artifacts_tests.rs:3:9
  |
3 |     use super::*; // Brings your VerifyingKey, Signature, CompositeError, etc. into scope
  |         ^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default

error[E0425]: cannot find function `ml_dsa_verify` in this scope
  --> tests\old_artifacts_tests.rs:39:9
   |
39 |         ml_dsa_verify(&vk.vk_ml, &m_prime, OLD_LABEL.as_bytes(), &signature.sig_ml)
   |         ^^^^^^^^^^^^^ not found in this scope

error[E0599]: no method named `as_slice` found for struct `TbsCertificate<'a>` in the current scope
  --> tests\old_artifacts_tests.rs:60:40
   |
60 |         let tbs = cert.tbs_certificate.as_slice();
   |                                        ^^^^^^^^ method not found in `TbsCertificate<'_>`
   |
help: some of the expressions' fields have a method of the same name
   |
60 |         let tbs = cert.tbs_certificate.issuer_uid.as_slice();
   |                                        +++++++++++
60 |         let tbs = cert.tbs_certificate.signature.parameters.as_slice();
   |                                        +++++++++++++++++++++
60 |         let tbs = cert.tbs_certificate.subject_pki.algorithm.parameters.as_slice();
   |                                        +++++++++++++++++++++++++++++++++
60 |         let tbs = cert.tbs_certificate.subject_uid.as_slice();
   |                                        ++++++++++++

Some errors have detailed explanations: E0412, E0425, E0433, E0599.
For more information about an error, try `rustc --explain E0412`.
warning: `pq-composite-sig` (test "old_artifacts_tests") generated 1 warning
error: could not compile `pq-composite-sig` (test "old_artifacts_tests") due to 10 previous errors; 1 warning emitted
